<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:background="@android:color/white"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                style="@style/question_style"
                android:text="@string/true_false"
                android:layout_marginTop="30dp"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/txt_question1"
                style="@style/question_style"
                android:text="@string/question1"/>


        <TextView
                style="@style/question_style"
                android:text="@string/true_false"
                android:layout_marginTop="30dp"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/txt_question2"
                style="@style/question_style"
                android:text="@string/question2"/>

        <TextView
                style="@style/question_style"
                android:text="@string/true_false"
                android:layout_marginTop="30dp"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/txt_question3"
                style="@style/question_style"
                android:text="@string/question3"
                 />

        <TextView
                style="@style/question_style"
                android:text="@string/true_false"
                android:layout_marginTop="30dp"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/txt_question4"
                style="@style/question_style"
                android:text="@string/question4"/>

        <TextView
                style="@style/question_style"
                android:text="@string/true_false"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>
        <TextView
                android:id="@+id/txt_question5"
                style="@style/question_style"
                android:text="@string/question5"/>

        <Button
                android:id="@+id/btn_submit_survey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>

