<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_favorites"
            android:enabled="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_schedules"
            android:enabled="true"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/quiz"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/action_music"
            android:enabled="true"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/transaction"
            app:showAsAction="ifRoom" />
</menu>